# merge-conflicts-resolver

./: CMakeLists.txt  README.md  backend.hpp  coloredString.hpp  conflicts.hpp  fileHandler.hpp  frontend.hpp  main.cpp  mergeAid.hpp  parsedCode.hpp  parser.hpp  printHandler.hpp  resolver.hpp  types.hpp
base/: BackendBase.hpp  ToolBase.hpp
tests/: CMakeLists.txt  conflicts.cpp  test.cpp
